--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-	"name": "Tisdagsgolfen",
-	"version": "0.0.1",
+	"name": "tisdagsgolfen",
+	"version": "2.0.0.beta",
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest"
 	},
 	"dependencies": {
+		"apollo-client": "^0.8.1",
+		"graphql-tag": "^1.2.4",
 		"react": "~15.4.0-rc.4",
+		"react-apollo": "^0.9.0",
 		"react-native": "0.41.1"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
+		"babel-plugin-transform-react-constant-elements": "^6.22.0",
 		"babel-preset-react-native": "1.9.1",
+		"eslint": "^3.15.0",
+		"eslint-plugin-graphql": "^0.6.0",
+		"eslint-plugin-react-native": "^2.2.1",
 		"jest": "18.1.0",
 		"react-test-renderer": "~15.4.0-rc.4"
 	},
