--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "tisdagsgolfen",
-	"version": "2.0.0.beta",
+	"version": "2.0.0",
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
@@ -11,7 +11,9 @@
 		"graphql-tag": "^1.2.4",
 		"react": "~15.4.0-rc.4",
 		"react-apollo": "^0.9.0",
-		"react-native": "0.41.1"
+		"react-native": "0.41.1",
+		"react-native-navbar": "^1.6.0",
+		"redux": "^3.6.0"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
