skip env variable for now, to see if it works

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,7 +67,7 @@ import com.android.build.OutputFile
 */
 
 project.ext.react = [
-  bundleInDebug: $System.env.CI == "true",
+  bundleInDebug: true,
   jsBundleDirDebug: "$buildDir/intermediates/assets/debug"
 ]
 
