eslint the shit out of alot of files!

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tisdagsgolfen"
+    package="se.calces.tisdagsgolfen"
     android:versionCode="1"
     android:versionName="1.0">
 
