--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,16 @@
   "extends": "airbnb",
   "rules": {
     "valid-jsdoc": 2,
-    // Disable until Flow supports let and const
-    "no-var": 1,
-    "react/jsx-uses-react": 1,
+    "no-var": 2,
+    "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/jsx-no-undef": 2,
-    "react/wrap-multilines": 2,
+    "react/jsx-wrap-multilines": 2,
+    "react/jsx-filename-extension": 0,
     "comma-dangle": [2, "never"],
-    "semi": [2, "never"]
+    "semi": [2, "never"],
+    "no-undef": 2,
+    "no-unused-vars": 2
   },
   "plugins": [
     "react",
