--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"apollo-client": "^0.8.3",
 		"graphql-tag": "^1.2.4",
+		"moment": "^2.17.1",
 		"react": "~15.4.0-rc.4",
 		"react-apollo": "^0.10.0",
 		"react-native": "0.41.2",
@@ -21,7 +22,11 @@
 		"babel-plugin-transform-react-constant-elements": "^6.22.0",
 		"babel-preset-react-native": "1.9.1",
 		"eslint": "^3.15.0",
+		"eslint-config-airbnb": "^14.1.0",
 		"eslint-plugin-graphql": "^0.6.0",
+		"eslint-plugin-import": "^2.2.0",
+		"eslint-plugin-jsx-a11y": "^4.0.0",
+		"eslint-plugin-react": "^6.9.0",
 		"eslint-plugin-react-native": "^2.2.1",
 		"jest": "18.1.0",
 		"react-test-renderer": "~15.4.0-rc.4"
