--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react": "~15.4.0-rc.4",
 		"react-apollo": "^0.10.1",
 		"react-native": "0.41.2",
+		"react-native-calendar-datepicker": "^1.1.2",
 		"react-native-navbar": "^1.6.0",
 		"react-router-native": "next",
 		"redux": "^3.6.0"
