--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"apollo-client": "^0.8.5",
 		"graphql-tag": "^1.2.4",
+		"immutability-helper": "^2.1.1",
 		"moment": "^2.17.1",
 		"react": "~15.4.0-rc.4",
 		"react-apollo": "^0.10.1",
