--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"immutability-helper": "^2.1.1",
 		"moment": "^2.17.1",
 		"react": "~15.4.0-rc.4",
-		"react-apollo": "^0.10.1",
+		"react-apollo": "kimf/react-apollo",
 		"react-native": "0.41.2",
 		"react-native-calendar-datepicker": "^1.1.2",
 		"react-native-navbar": "^1.6.0",
@@ -23,6 +23,7 @@
 		"babel-jest": "18.0.0",
 		"babel-plugin-transform-react-constant-elements": "^6.23.0",
 		"babel-preset-react-native": "1.9.1",
+		"babylon": "^6.14.1",
 		"eslint": "^3.15.0",
 		"eslint-config-airbnb": "^14.1.0",
 		"eslint-plugin-graphql": "^0.6.0",
