added back android bundle for buddybuild

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,10 +66,10 @@ import com.android.build.OutputFile
  * ]
 */
 
-/*project.ext.react = [
+project.ext.react = [
   bundleInDebug: true,
   jsBundleDirDebug: "$buildDir/intermediates/assets/debug"
-]*/
+]
 
 apply from: "../../node_modules/react-native/react.gradle"
 /**
