--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"immutability-helper": "^2.1.1",
 		"moment": "^2.17.1",
 		"react": "~15.4.0-rc.4",
-		"react-apollo": "kimf/react-apollo",
+		"react-apollo": "^0.11.1",
 		"react-native": "0.41.2",
 		"react-native-calendar-datepicker": "^1.1.2",
 		"react-native-navbar": "^1.6.0",
