--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"react-native-calendar-datepicker": "^1.1.2",
 		"react-native-navbar": "^1.6.0",
 		"react-router-native": "next",
-		"redux": "^3.6.0"
+		"redux": "^3.6.0",
+		"subscriptions-transport-ws": "^0.5.1"
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
