--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-native": "0.41.2",
 		"react-native-calendar-datepicker": "^1.1.2",
 		"react-native-navbar": "^1.6.0",
+		"react-native-onesignal": "^3.0.3",
 		"react-router-native": "next",
 		"redux": "^3.6.0",
 		"subscriptions-transport-ws": "^0.5.1"
