--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-apollo": "^0.11.1",
 		"react-native": "0.41.2",
 		"react-native-calendar-datepicker": "^1.1.2",
+		"react-native-device-log": "^0.0.16",
 		"react-native-navbar": "^1.6.0",
 		"react-native-onesignal": "^3.0.3",
 		"react-router-native": "next",
