--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"apollo-client": "^0.8.5",
 		"graphql-tag": "^1.2.4",
+		"history": "^4.5.1",
 		"immutability-helper": "^2.1.1",
 		"moment": "^2.17.1",
 		"react": "~15.4.0-rc.4",
@@ -18,7 +19,9 @@
 		"react-native-device-log": "^0.0.16",
 		"react-native-navbar": "^1.6.0",
 		"react-native-onesignal": "^3.0.3",
+		"react-redux": "^5.0.3",
 		"react-router-native": "next",
+		"react-router-navigation": "LeoLeBras/react-router-navigation#dev",
 		"redux": "^3.6.0",
 		"subscriptions-transport-ws": "^0.5.1"
 	},
