--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
   "parser": "babel-eslint",
   "extends": "airbnb",
+  "globals": {
+    "__DEV__": true,
+    "window": true
+  },
   "rules": {
     "valid-jsdoc": 2,
     "no-var": 2,
