--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,3 @@
 {
-  "presets": [
-    "react-native"
-  ],
-  "env": {
-    "production": {
-      "plugins": [
-        "transform-react-constant-elements"
-      ]
-    }
-  }
+"presets": ["react-native"]
 }
