--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
 		"history": "^4.5.1",
 		"immutability-helper": "^2.1.1",
 		"moment": "^2.17.1",
-		"react": "~15.4.0-rc.4",
+		"react": "~15.4.1",
 		"react-apollo": "^0.11.1",
-		"react-native": "0.41.2",
+		"react-native": "0.42.0",
 		"react-native-calendar-datepicker": "^1.1.2",
 		"react-native-device-log": "^0.0.16",
 		"react-native-navbar": "^1.6.0",
@@ -29,7 +29,6 @@
 	},
 	"devDependencies": {
 		"babel-jest": "18.0.0",
-		"babel-plugin-transform-react-constant-elements": "^6.23.0",
 		"babel-preset-react-native": "1.9.1",
 		"babylon": "^6.15.0",
 		"eslint": "^3.15.0",
