--- a/package.json
+++ b/package.json
@@ -7,39 +7,42 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"apollo-client": "^0.8.5",
-		"graphql-tag": "^1.2.4",
+		"apollo-client": "^0.10.1",
+		"graphql-tag": "^1.3.1",
 		"history": "^4.5.1",
-		"immutability-helper": "^2.1.1",
+		"immutability-helper": "^2.1.2",
 		"moment": "^2.17.1",
 		"react": "~15.4.1",
-		"react-apollo": "^0.11.1",
+		"react-apollo": "^0.13.2",
 		"react-native": "0.42.0",
-		"react-native-calendar-datepicker": "^1.1.2",
+		"react-native-calendar-datepicker": "^1.2.2",
 		"react-native-device-log": "^0.0.16",
-		"react-native-navbar": "^1.6.0",
+		"react-native-navbar": "^1.6.2",
 		"react-native-onesignal": "^3.0.3",
+		"react-native-slowlog": "^1.0.2",
 		"react-redux": "^5.0.3",
-		"react-router-native": "next",
-		"react-router-navigation": "^1.0.0-beta.1",
+		"react-router-native": "4.0.0-beta.5",
+		"react-router-navigation": "LeoLeBras/react-router-navigation",
 		"redux": "^3.6.0",
+		"redux-immutable-state-invariant": "^1.2.4",
 		"redux-persist": "^4.4.2",
 		"reselect": "^2.5.4",
-		"subscriptions-transport-ws": "^0.5.1"
+		"subscriptions-transport-ws": "^0.5.3"
 	},
 	"devDependencies": {
-		"babel-jest": "18.0.0",
+		"babel-jest": "19.0.0",
 		"babel-preset-react-native": "1.9.1",
-		"babylon": "^6.15.0",
-		"eslint": "^3.15.0",
+		"babylon": "^6.16.1",
+		"eslint": "^3.17.0",
 		"eslint-config-airbnb": "^14.1.0",
-		"eslint-plugin-graphql": "^0.6.0",
+		"eslint-plugin-graphql": "^0.6.1",
 		"eslint-plugin-import": "^2.2.0",
 		"eslint-plugin-jsx-a11y": "^4.0.0",
-		"eslint-plugin-react": "^6.9.0",
+		"eslint-plugin-react": "^6.10.0",
 		"eslint-plugin-react-native": "^2.2.1",
-		"jest": "18.1.0",
-		"react-test-renderer": "~15.4.0-rc.4"
+		"jest": "19.0.2",
+		"react-test-renderer": "~15.4.0-rc.4",
+		"why-did-you-update": "^0.0.8"
 	},
 	"jest": {
 		"preset": "react-native"
