--- a/package.json
+++ b/package.json
@@ -11,35 +11,37 @@
 		"graphql-tag": "^1.3.1",
 		"history": "^4.5.1",
 		"immutability-helper": "^2.1.2",
+		"lokka": "^1.7.0",
+		"lokka-transport-http": "^1.6.1",
 		"moment": "^2.17.1",
-		"react": "~15.4.1",
+		"react": "~16.0.0-alpha.3",
 		"react-apollo": "^0.13.2",
-		"react-native": "0.42.0",
+		"react-native": "facebook/react-native",
 		"react-native-calendar-datepicker": "^1.2.2",
 		"react-native-device-log": "^0.0.16",
-		"react-native-navbar": "^1.6.2",
+		"react-native-navigation": "next",
 		"react-native-onesignal": "^3.0.3",
 		"react-native-slowlog": "^1.0.2",
 		"react-redux": "^5.0.3",
-		"react-router-native": "4.0.0-beta.7",
-		"react-router-navigation": "LeoLeBras/react-router-navigation#next",
 		"redux": "^3.6.0",
-		"redux-immutable-state-invariant": "^1.2.4",
+		"redux-immutable-state-invariant": "^2.0.0",
 		"redux-persist": "^4.4.2",
+		"redux-thunk": "^2.2.0",
 		"reselect": "^2.5.4",
 		"subscriptions-transport-ws": "^0.5.3"
 	},
 	"devDependencies": {
+		"babel-eslint": "^7.1.1",
 		"babel-jest": "19.0.0",
 		"babel-preset-react-native": "1.9.1",
 		"babylon": "^6.16.1",
-		"eslint": "^3.17.0",
+		"eslint": "^3.17.1",
 		"eslint-config-airbnb": "^14.1.0",
 		"eslint-plugin-graphql": "^0.6.1",
 		"eslint-plugin-import": "^2.2.0",
 		"eslint-plugin-jsx-a11y": "^4.0.0",
 		"eslint-plugin-react": "^6.10.0",
-		"eslint-plugin-react-native": "^2.2.1",
+		"eslint-plugin-react-native": "^2.3.1",
 		"jest": "19.0.2",
 		"react-test-renderer": "~15.4.0-rc.4",
 		"why-did-you-update": "^0.0.8"
