--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,10 +133,11 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-onesignal')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-navigation')
+    compile project(':react-native-onesignal')
 }
 
 // Run this once to be able to run the application with BUCK
