refactor, mostly babel-plugin-module-resolver

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
-"presets": ["react-native"]
+  "presets": ["react-native", "react-native-stage-0/decorator-support"],
+  "plugins": [
+    ["module-resolver", { 
+      "root": ["./src", "./src/components"],
+      "alias": {
+        "shared": "./src/components/shared"
+      }
+    }]
+  ]
 }
