--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
+		"test": "jest",
+		"android:build": "cd android && ./gradlew assembleRelease",
+		"clean": "watchman watch-del-all && rm -rf $TMPDIR/react-*",
+		"lint": "eslint src"
 	},
 	"dependencies": {
 		"apollo-client": "^0.10.1",
+		"babel-preset-react-native-stage-0": "^1.0.1",
 		"graphql-tag": "^1.3.1",
 		"history": "^4.5.1",
 		"immutability-helper": "^2.1.2",
@@ -33,10 +37,12 @@
 	"devDependencies": {
 		"babel-eslint": "^7.1.1",
 		"babel-jest": "19.0.0",
+		"babel-plugin-module-resolver": "^2.5.0",
 		"babel-preset-react-native": "1.9.1",
 		"babylon": "^6.16.1",
 		"eslint": "^3.17.1",
 		"eslint-config-airbnb": "^14.1.0",
+		"eslint-import-resolver-babel-module": "^3.0.0",
 		"eslint-plugin-graphql": "^0.6.1",
 		"eslint-plugin-import": "^2.2.0",
 		"eslint-plugin-jsx-a11y": "^4.0.0",
