--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
 		"moment": "^2.17.1",
 		"react": "~16.0.0-alpha.3",
 		"react-apollo": "^0.13.2",
-		"react-native": "facebook/react-native",
+		"react-native": "^0.43.0-rc.0",
 		"react-native-calendar-datepicker": "^1.2.2",
 		"react-native-device-log": "^0.0.16",
-		"react-native-navigation": "next",
+		"react-native-navigation": "^v2.0.0-experimental.240",
 		"react-native-onesignal": "^3.0.3",
 		"react-native-slowlog": "^1.0.2",
 		"react-redux": "^5.0.3",
