--- a/package.json
+++ b/package.json
@@ -13,17 +13,16 @@
 		"apollo-client": "^0.10.1",
 		"babel-preset-react-native-stage-0": "^1.0.1",
 		"graphql-tag": "^1.3.1",
-		"history": "^4.5.1",
 		"immutability-helper": "^2.1.2",
 		"lokka": "^1.7.0",
 		"lokka-transport-http": "^1.6.1",
 		"moment": "^2.17.1",
-		"react": "~16.0.0-alpha.3",
+		"react": "~15.4.1",
 		"react-apollo": "^0.13.2",
-		"react-native": "^0.43.0-rc.0",
+		"react-native": "0.42.0",
 		"react-native-calendar-datepicker": "^1.2.2",
 		"react-native-device-log": "^0.0.16",
-		"react-native-navigation": "^v2.0.0-experimental.240",
+		"react-native-navigation": "next",
 		"react-native-onesignal": "^3.0.3",
 		"react-native-slowlog": "^1.0.2",
 		"react-redux": "^5.0.3",
@@ -32,7 +31,7 @@
 		"redux-persist": "^4.4.2",
 		"redux-thunk": "^2.2.0",
 		"reselect": "^2.5.4",
-		"subscriptions-transport-ws": "^0.5.3"
+		"subscriptions-transport-ws": "^0.5.5-alpha.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^7.1.1",
