--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"babel-preset-react-native-stage-0": "^1.0.1",
 		"graphql-tag": "^1.3.1",
 		"immutability-helper": "^2.1.2",
-		"lokka": "^1.7.0",
-		"lokka-transport-http": "^1.6.1",
+		"lodash.keys": "^4.2.0",
+		"lodash.pick": "^4.4.0",
 		"moment": "^2.17.1",
 		"react": "~15.4.1",
 		"react-apollo": "^0.13.2",
