--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
 		"eslint-plugin-react": "^6.10.0",
 		"eslint-plugin-react-native": "^2.3.1",
 		"jest": "19.0.2",
+		"mobile-center-analytics": "^0.3.0",
+		"mobile-center-crashes": "^0.3.0",
 		"react-test-renderer": "~15.4.0-rc.4",
 		"why-did-you-update": "^0.0.8"
 	},
