courses are now fetched from api

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,21 @@
 {
-  "presets": ["react-native", "react-native-stage-0/decorator-support"],
+  "presets": [
+    "react-native",
+    "react-native-stage-0/decorator-support"
+  ],
   "plugins": [
-    ["module-resolver", { 
-      "root": ["./src", "./src/components"],
-      "alias": {
-        "shared": "./src/components/shared"
+    [
+      "module-resolver",
+      {
+        "root": [
+          "./src",
+          "./src/components"
+        ],
+        "alias": {
+          "shared": "./src/components/shared"
+        }
       }
-    }]
-  ]
+    ]
+  ],
+  "sourceMaps": true
 }
