--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"apollo-client": "^0.10.1",
 		"babel-preset-react-native-stage-0": "^1.0.1",
+		"fuse.js": "^2.6.2",
 		"graphql-tag": "^1.3.1",
 		"immutability-helper": "^2.1.2",
 		"lodash.keys": "^4.2.0",
