--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"lint": "eslint src"
 	},
 	"dependencies": {
-		"apollo-client": "^0.10.1",
+		"apollo-client": "^1.0.0-rc.2",
 		"babel-preset-react-native-stage-0": "^1.0.1",
 		"fuse.js": "^2.6.2",
 		"graphql-tag": "^1.3.1",
@@ -19,7 +19,7 @@
 		"lodash.pick": "^4.4.0",
 		"moment": "^2.17.1",
 		"react": "~15.4.1",
-		"react-apollo": "^0.13.2",
+		"react-apollo": "^1.0.0-rc.2",
 		"react-native": "0.42.0",
 		"react-native-calendar-datepicker": "^1.2.2",
 		"react-native-device-log": "^0.0.16",
@@ -28,7 +28,6 @@
 		"react-native-slowlog": "^1.0.2",
 		"react-redux": "^5.0.3",
 		"redux": "^3.6.0",
-		"redux-immutable-state-invariant": "^2.0.0",
 		"redux-persist": "^4.4.2",
 		"redux-thunk": "^2.2.0",
 		"reselect": "^2.5.4",
@@ -43,7 +42,7 @@
 		"eslint": "^3.17.1",
 		"eslint-config-airbnb": "^14.1.0",
 		"eslint-import-resolver-babel-module": "^3.0.0",
-		"eslint-plugin-graphql": "^0.6.1",
+		"eslint-plugin-graphql": "^0.7.0",
 		"eslint-plugin-import": "^2.2.0",
 		"eslint-plugin-jsx-a11y": "^4.0.0",
 		"eslint-plugin-react": "^6.10.0",
