Refactoring: Broke out qraphql queries+mutations
Also made some formatting fixes.

--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,8 @@
       {
         "root": [
           "./src",
-          "./src/components"
+          "./src/components",
+          "./src/graph"
         ],
         "alias": {
           "shared": "./src/components/shared"
