--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"test": "jest",
 		"android:build": "cd android && ./gradlew assembleRelease",
 		"clean": "watchman watch-del-all && rm -rf $TMPDIR/react-*",
-		"lint": "eslint src"
+		"lint": "eslint src",
+		"get-schema": "get-grahpql-schema https://api.graph.cool/simple/v1/ciyqax2o04t37012092ntrd7e > ./schema.json"
 	},
 	"dependencies": {
 		"apollo-client": "^1.0.0-rc.2",
@@ -20,7 +21,7 @@
 		"moment": "^2.17.1",
 		"react": "~15.4.1",
 		"react-apollo": "^1.0.0-rc.2",
-		"react-native": "0.42.0",
+		"react-native": "^0.42.2",
 		"react-native-calendar-datepicker": "^1.2.2",
 		"react-native-device-log": "^0.0.16",
 		"react-native-navigation": "next",
@@ -47,6 +48,7 @@
 		"eslint-plugin-jsx-a11y": "^4.0.0",
 		"eslint-plugin-react": "^6.10.0",
 		"eslint-plugin-react-native": "^2.3.1",
+		"get-graphql-schema": "^1.0.1",
 		"jest": "19.0.2",
 		"mobile-center-analytics": "^0.3.0",
 		"mobile-center-crashes": "^0.3.0",
