--- a/package.json
+++ b/package.json
@@ -1,66 +1,72 @@
 {
-	"name": "tisdagsgolfen",
-	"version": "2.0.0",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest",
-		"android:build": "cd android && ./gradlew assembleRelease",
-		"clean": "watchman watch-del-all && rm -rf $TMPDIR/react-*",
-		"lint": "eslint src",
-		"get-schema": "get-grahpql-schema https://api.graph.cool/simple/v1/ciyqax2o04t37012092ntrd7e > ./schema.json"
-	},
-	"dependencies": {
-		"apollo-client": "^1.0.0-rc.2",
-		"babel-preset-react-native-stage-0": "^1.0.1",
-		"fuse.js": "^2.6.2",
-		"graphql-tag": "^1.3.1",
-		"immutability-helper": "^2.1.2",
-		"lodash.keys": "^4.2.0",
-		"lodash.pick": "^4.4.0",
-		"moment": "^2.17.1",
-		"react": "~15.4.1",
-		"react-apollo": "^1.0.0-rc.2",
-		"react-native": "^0.42.2",
-		"react-native-animated-modal": "^1.0.2",
-		"react-native-calendar-datepicker": "^1.2.2",
-		"react-native-device-log": "^0.0.16",
-		"react-native-navigation": "next",
-		"react-native-onesignal": "^3.0.3",
-		"react-native-slowlog": "^1.0.2",
-		"react-redux": "^5.0.3",
-		"redux": "^3.6.0",
-		"redux-persist": "^4.4.2",
-		"redux-thunk": "^2.2.0",
-		"reselect": "^2.5.4",
-		"subscriptions-transport-ws": "^0.5.5-alpha.0"
-	},
-	"devDependencies": {
-		"babel-eslint": "^7.1.1",
-		"babel-jest": "19.0.0",
-		"babel-plugin-module-resolver": "^2.5.0",
-		"babel-preset-react-native": "1.9.1",
-		"babylon": "^6.16.1",
-		"eslint": "^3.17.1",
-		"eslint-config-airbnb": "^14.1.0",
-		"eslint-import-resolver-babel-module": "^3.0.0",
-		"eslint-plugin-graphql": "^0.7.0",
-		"eslint-plugin-import": "^2.2.0",
-		"eslint-plugin-jsx-a11y": "^4.0.0",
-		"eslint-plugin-react": "^6.10.0",
-		"eslint-plugin-react-native": "^2.3.1",
-		"get-graphql-schema": "^1.0.1",
-		"jest": "19.0.2",
-		"mobile-center-analytics": "^0.3.0",
-		"mobile-center-crashes": "^0.3.0",
-		"react-test-renderer": "~15.4.0-rc.4"
-	},
-	"rnpm": {
-		"assets": [
-			"assets/fonts"
-		]
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "tisdagsgolfen",
+  "version": "2.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "clean": "watchman watch-del-all && rm -rf $TMPDIR/react-*",
+    "test": "jest",
+    "lint": "eslint src",
+    "storybook": "storybook start -p 7007",
+    "get-schema": "get-grahpql-schema https://api.graph.cool/simple/v1/ciyqax2o04t37012092ntrd7e > ./schema.json",
+    "android:build": "cd android && ./gradlew assembleRelease",
+    "android:emulator": "emulator -avd Nexus6-android7.1.1-apiLevel25",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios --simulator \"iPhone 7\"",
+    "ios:storybook": "react-native run-ios --simulator \"iPhone 7\" --scheme TisdagsgolfenStorybook"
+  },
+  "dependencies": {
+    "apollo-client": "^1.0.0-rc.2",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "fuse.js": "^2.6.2",
+    "graphql-tag": "^1.3.1",
+    "immutability-helper": "^2.1.2",
+    "lodash.keys": "^4.2.0",
+    "lodash.pick": "^4.4.0",
+    "moment": "^2.17.1",
+    "react": "~15.4.1",
+    "react-apollo": "^1.0.0-rc.2",
+    "react-native": "^0.42.2",
+    "react-native-animated-modal": "^1.0.2",
+    "react-native-calendar-datepicker": "^1.2.2",
+    "react-native-device-log": "^0.0.16",
+    "react-native-navigation": "next",
+    "react-native-onesignal": "^3.0.3",
+    "react-native-slowlog": "^1.0.2",
+    "react-redux": "^5.0.3",
+    "redux": "^3.6.0",
+    "redux-persist": "^4.4.2",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^2.5.4",
+    "subscriptions-transport-ws": "^0.5.5-alpha.0"
+  },
+  "devDependencies": {
+    "@kadira/react-native-storybook": "^2.2.4",
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "19.0.0",
+    "babel-plugin-module-resolver": "^2.5.0",
+    "babel-preset-react-native": "1.9.1",
+    "babylon": "^6.16.1",
+    "eslint": "^3.17.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-import-resolver-babel-module": "^3.0.0",
+    "eslint-plugin-graphql": "^0.7.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-react-native": "^2.3.1",
+    "get-graphql-schema": "^1.0.1",
+    "jest": "19.0.2",
+    "mobile-center-analytics": "^0.3.0",
+    "mobile-center-crashes": "^0.3.0",
+    "react-test-renderer": "~15.4.0-rc.4"
+  },
+  "rnpm": {
+    "assets": [
+      "assets/fonts"
+    ]
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
