--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "android:emulator": "emulator -avd Nexus6-android7.1.1-apiLevel25",
     "android": "react-native run-android",
     "ios": "react-native run-ios --simulator \"iPhone 7\"",
-    "ios:storybook": "react-native run-ios --simulator \"iPhone 7\" --scheme TisdagsgolfenStorybook"
+    "ios:storybook": "react-native run-ios --simulator \"iPhone 7\" --scheme TGStorybook"
   },
   "dependencies": {
-    "apollo-client": "^1.0.0-rc.2",
+    "apollo-client": "^1.0.0-rc.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "fuse.js": "^2.6.2",
     "graphql-tag": "^1.3.1",
     "immutability-helper": "^2.1.2",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
-    "moment": "^2.17.1",
+    "moment": "^2.18.0",
     "react": "~15.4.1",
-    "react-apollo": "^1.0.0-rc.2",
-    "react-native": "^0.42.2",
+    "react-apollo": "^1.0.0-rc.3",
+    "react-native": "^0.42.3",
     "react-native-animated-modal": "^1.0.2",
     "react-native-calendar-datepicker": "^1.2.2",
     "react-native-device-log": "^0.0.16",
@@ -47,13 +47,13 @@
     "babel-plugin-module-resolver": "^2.5.0",
     "babel-preset-react-native": "1.9.1",
     "babylon": "^6.16.1",
-    "eslint": "^3.17.1",
+    "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-import-resolver-babel-module": "^3.0.0",
     "eslint-plugin-graphql": "^0.7.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-react": "^6.10.1",
     "eslint-plugin-react-native": "^2.3.1",
     "get-graphql-schema": "^1.0.1",
     "jest": "19.0.2",
