--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-device-log": "^0.0.16",
     "react-native-onesignal": "^3.0.3",
     "react-native-slowlog": "^1.0.2",
+    "react-navigation": "^1.0.0-beta.7",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-persist": "^4.4.2",
