--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "moment": "^2.18.1",
     "react": "~15.4.1",
     "react-apollo": "^1.0.0-rc.3",
-    "react-native": "^0.42.3",
+    "react-native": "^0.43.0-rc.4",
     "react-native-calendar-datepicker": "^1.2.2",
     "react-native-device-log": "^0.0.16",
     "react-native-onesignal": "^3.0.3",
