--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
     "moment": "^2.18.1",
-    "react": "~15.4.1",
+    "react": "~16.0.0-alpha.3",
     "react-apollo": "^1.0.0-rc.3",
-    "react-native": "^0.43.0-rc.4",
+    "react-native": "0.43.0-rc.4",
     "react-native-calendar-datepicker": "^1.2.2",
     "react-native-device-log": "^0.0.16",
     "react-native-onesignal": "^3.0.3",
