--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
   "dependencies": {
     "apollo-client": "^1.0.0-rc.6",
     "babel-preset-react-native-stage-0": "^1.0.1",
-    "fuse.js": "^2.6.2",
     "graphql-tag": "^1.3.2",
     "immutability-helper": "^2.1.2",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
     "moment": "^2.18.1",
-    "react": "~16.0.0-alpha.3",
+    "react": "16.0.0-alpha.4",
     "react-apollo": "^1.0.0-rc.3",
     "react-native": "0.43.0-rc.4",
     "react-native-calendar-datepicker": "^1.2.2",
