upgraded a lot of things

--- a/package.json
+++ b/package.json
@@ -16,48 +16,48 @@
     "ios:storybook": "react-native run-ios --simulator \"iPhone 7\" --scheme TGStorybook"
   },
   "dependencies": {
-    "apollo-client": "^1.0.0-rc.8",
+    "apollo-client": "^1.2.2",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "graphql-tag": "^2.0.0",
     "immutability-helper": "^2.1.2",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
     "moment": "^2.18.1",
-    "react": "16.0.0-alpha.4",
-    "react-apollo": "^1.0.0-rc.3",
-    "react-native": "0.43.0-rc.4",
-    "react-native-device-log": "^0.0.16",
-    "react-native-onesignal": "^3.0.3",
+    "react": "16.0.0-alpha.6",
+    "react-apollo": "^1.2.0",
+    "react-native": "0.44.0",
+    "react-native-device-log": "^0.0.17",
+    "react-native-onesignal": "^3.0.4",
     "react-native-segmented-view": "^2.0.0",
     "react-native-slowlog": "^1.0.2",
-    "react-navigation": "^1.0.0-beta.7",
-    "react-redux": "^5.0.3",
+    "react-navigation": "^1.0.0-beta.9",
+    "react-redux": "^5.0.4",
     "redux": "^3.6.0",
-    "redux-persist": "^4.4.2",
+    "redux-persist": "^4.8.0",
     "redux-thunk": "^2.2.0",
-    "subscriptions-transport-ws": "^0.5.5-alpha.0"
+    "subscriptions-transport-ws": "^0.6.0"
   },
   "devDependencies": {
     "@kadira/react-native-storybook": "^2.3.0",
-    "babel-eslint": "^7.2.1",
-    "babel-jest": "19.0.0",
-    "babel-plugin-module-resolver": "^2.6.0",
+    "babel-eslint": "^7.2.3",
+    "babel-jest": "20.0.1",
+    "babel-plugin-module-resolver": "^2.7.0",
     "babel-preset-react-native": "1.9.1",
-    "babylon": "^6.16.1",
-    "eslint": "^3.18.0",
+    "babylon": "^6.17.1",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-import-resolver-babel-module": "^3.0.0",
-    "eslint-plugin-graphql": "^0.7.0",
+    "eslint-plugin-graphql": "^0.8.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "eslint-plugin-react-native": "^2.3.1",
-    "eslint-plugin-react-perf": "^2.0.4",
-    "get-graphql-schema": "^1.0.1",
-    "jest": "19.0.2",
-    "mobile-center-analytics": "^0.3.0",
-    "mobile-center-crashes": "^0.3.0",
-    "react-test-renderer": "~15.4.0-rc.4"
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-react": "^7.0.0",
+    "eslint-plugin-react-native": "^2.3.2",
+    "eslint-plugin-react-perf": "^2.0.5",
+    "get-graphql-schema": "^2.0.0",
+    "jest": "20.0.1",
+    "mobile-center-analytics": "^0.4.0",
+    "mobile-center-crashes": "^0.4.0",
+    "react-test-renderer": "^15.5.4"
   },
   "jest": {
     "preset": "react-native"
