--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.9",
     "react": "16.0.0-alpha.6",
     "react-apollo": "^1.2.0",
     "react-native": "0.44.0",
@@ -49,8 +50,8 @@
     "eslint-import-resolver-babel-module": "^3.0.0",
     "eslint-plugin-graphql": "^0.8.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-react": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-react-native": "^2.3.2",
     "eslint-plugin-react-perf": "^2.0.5",
     "get-graphql-schema": "^2.0.0",
