small fixes here and there. mostly, live leaderboard

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react-native-stage-0": "^1.0.1",
     "graphql-tag": "^2.0.0",
     "immutability-helper": "^2.1.2",
+    "lodash.groupby": "^4.6.0",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
     "moment": "^2.18.1",
@@ -33,6 +34,7 @@
     "react-native-slowlog": "^1.0.2",
     "react-navigation": "react-community/react-navigation",
     "react-redux": "^5.0.4",
+    "react-required-if": "^1.0.1",
     "redux": "^3.6.0",
     "redux-persist": "^4.8.0",
     "redux-thunk": "^2.2.0",
