--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "test": "jest",
     "lint": "eslint src",
     "storybook": "storybook start -p 7007",
-    "get-schema": "get-grahpql-schema https://api.graph.cool/simple/v1/ciyqax2o04t37012092ntrd7e > ./schema.json",
     "android:build": "cd android && ./gradlew assembleRelease",
     "android:emulator": "emulator -avd Nexus6-android7.1.1-apiLevel25",
     "android": "react-native run-android",
@@ -56,7 +55,7 @@
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-react-native": "^2.3.2",
     "eslint-plugin-react-perf": "^2.0.5",
-    "get-graphql-schema": "^2.0.0",
+    "graphcool": "^0.5.0",
     "jest": "20.0.1",
     "mobile-center-analytics": "^0.4.0",
     "mobile-center-crashes": "^0.4.0",
