removed fastlane report and added it to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -48,8 +48,7 @@ buck-out/
 # For more information about the recommended setup visit:
 # https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
+ios/fastlane/report.xml
+ios/fastlane/Preview.html
 
 ios/Tisdagsgolfen.app.dSYM.zip
