--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "clean": "watchman watch-del-all && rm -rf $TMPDIR/react-*",
     "test": "jest",
     "lint": "eslint src",
-    "graphql:schema": "get-graphql-schema -j https://api.graph.cool/simple/v1/ciyqax2o04t37012092ntrd7e > schema.json", // This is needed until eslint-graphql/template-strings supports graphql IDL schemas
+    "graphql:schema": "get-graphql-schema -j https://api.graph.cool/simple/v1/ciyqax2o04t37012092ntrd7e > schema.json",
     "storybook": "storybook start -p 7007",
-    "android:build": "cd android && ./gradlew assembleRelease",
+    "android:build:dev": "cd android && ./gradlew assembleRelease",
+    "android:build:prod": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
     "android:emulator": "emulator -avd Nexus6-android7.1.1-apiLevel25",
     "android": "react-native run-android",
     "ios": "react-native run-ios --simulator \"iPhone 7\"",
@@ -28,9 +29,11 @@
     "react": "16.0.0-alpha.6",
     "react-apollo": "^1.2.0",
     "react-native": "0.44.0",
+    "react-native-config": "^0.4.2",
     "react-native-device-log": "^0.0.17",
     "react-native-onesignal": "^3.0.4",
     "react-native-segmented-view": "^2.0.0",
+    "react-native-sentry": "^0.10.0",
     "react-native-slowlog": "^1.0.2",
     "react-navigation": "react-community/react-navigation",
     "react-redux": "^5.0.4",
@@ -60,8 +63,6 @@
     "eslint-plugin-react-perf": "^2.0.5",
     "graphcool": "^0.5.0",
     "jest": "20.0.1",
-    "mobile-center-analytics": "^0.4.0",
-    "mobile-center-crashes": "^0.4.0",
     "react-test-renderer": "^15.5.4"
   },
   "jest": {
