--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "ios:storybook": "react-native run-ios --simulator \"iPhone 7\" --scheme TGStorybook"
   },
   "dependencies": {
-    "apollo-client": "^1.2.2",
+    "apollo-client": "^1.3.0",
     "babel-preset-react-native-stage-0": "^1.0.1",
-    "graphql-tag": "^2.0.0",
-    "immutability-helper": "^2.1.2",
+    "graphql-tag": "^2.2.1",
+    "immutability-helper": "^2.2.2",
     "lodash.groupby": "^4.6.0",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
@@ -28,41 +28,41 @@
     "prop-types": "^15.5.9",
     "react": "16.0.0-alpha.6",
     "react-apollo": "^1.2.0",
-    "react-native": "0.44.0",
+    "react-native": "0.44.2",
     "react-native-config": "^0.4.2",
     "react-native-device-log": "^0.0.17",
     "react-native-onesignal": "^3.0.4",
     "react-native-segmented-view": "^2.0.0",
     "react-native-sentry": "^0.10.0",
     "react-native-slowlog": "^1.0.2",
-    "react-navigation": "react-community/react-navigation",
+    "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.4",
     "react-required-if": "^1.0.1",
     "redux": "^3.6.0",
     "redux-persist": "^4.8.0",
     "redux-thunk": "^2.2.0",
-    "subscriptions-transport-ws": "^0.6.0"
+    "subscriptions-transport-ws": "^0.7.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.0.0-alpha.0",
-    "@storybook/addon-links": "^3.0.0-alpha.0",
-    "@storybook/react-native": "^2.0.0",
+    "@storybook/addon-actions": "^3.0.0",
+    "@storybook/addon-links": "^3.0.0",
+    "@storybook/react-native": "^3.0.0",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "20.0.1",
+    "babel-jest": "20.0.3",
     "babel-plugin-module-resolver": "^2.7.0",
-    "babel-preset-react-native": "1.9.1",
+    "babel-preset-react-native": "1.9.2",
     "babylon": "^6.17.1",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-babel-module": "^3.0.0",
-    "eslint-plugin-graphql": "^0.8.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-graphql": "^0.8.2",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "eslint-plugin-react-native": "^2.3.2",
     "eslint-plugin-react-perf": "^2.0.5",
-    "graphcool": "^0.5.0",
-    "jest": "20.0.1",
+    "graphcool": "^0.5.3",
+    "jest": "20.0.4",
     "react-test-renderer": "^15.5.4"
   },
   "jest": {
