--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "eslint-plugin-react-perf": "^2.0.5",
     "graphcool": "^0.5.3",
     "jest": "20.0.4",
-    "react-test-renderer": "^15.5.4"
+    "react-test-renderer": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "jest": {
     "preset": "react-native"
