--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "lodash.pick": "^4.4.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.9",
-    "react": "16.0.0-alpha.6",
+    "react": "16.0.0-alpha.12",
     "react-apollo": "^1.2.0",
-    "react-native": "0.44.2",
+    "react-native": "0.45.0-rc.1",
     "react-native-config": "^0.4.2",
     "react-native-device-log": "^0.0.17",
     "react-native-onesignal": "^3.0.4",
@@ -46,7 +46,7 @@
   "devDependencies": {
     "@storybook/addon-actions": "^3.0.0",
     "@storybook/addon-links": "^3.0.0",
-    "@storybook/react-native": "^3.0.0",
+    "@storybook/react-native": "alpha",
     "babel-eslint": "^7.2.3",
     "babel-jest": "20.0.3",
     "babel-plugin-module-resolver": "^2.7.0",
@@ -63,8 +63,8 @@
     "eslint-plugin-react-perf": "^2.0.5",
     "graphcool": "^0.5.3",
     "jest": "20.0.4",
-    "react-test-renderer": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^16.0.0-alpha.12",
+    "react-test-renderer": "^15.5.4"
   },
   "jest": {
     "preset": "react-native"
