--- a/package.json
+++ b/package.json
@@ -19,52 +19,51 @@
   "dependencies": {
     "apollo-client": "^1.9.0-0",
     "babel-preset-react-native-stage-0": "^1.0.1",
-    "graphql-tag": "^2.2.1",
-    "immutability-helper": "^2.2.2",
+    "graphql-tag": "^2.4.2",
+    "immutability-helper": "^2.3.0",
     "lodash.groupby": "^4.6.0",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
     "moment": "^2.18.1",
-    "prop-types": "^15.5.9",
-    "react": "16.0.0-alpha.12",
-    "react-apollo": "^1.2.0",
-    "react-native": "0.46.2",
+    "prop-types": "^15.5.10",
+    "react": "^16.0.0-alpha.12",
+    "react-apollo": "^1.4.3",
+    "react-native": "^0.47.0-rc.3",
     "react-native-config": "^0.5.0",
     "react-native-device-log": "^0.0.17",
     "react-native-onesignal": "^3.0.4",
     "react-native-segmented-view": "^2.0.0",
-    "react-native-sentry": "^0.14.5",
     "react-native-slowlog": "^1.0.2",
     "react-navigation": "^1.0.0-beta.11",
-    "react-redux": "^5.0.4",
+    "react-redux": "^5.0.5",
     "react-required-if": "^1.0.1",
-    "redux": "^3.6.0",
-    "redux-persist": "^4.8.0",
+    "redux": "^3.7.2",
+    "redux-persist": "^4.8.2",
     "redux-thunk": "^2.2.0",
     "subscriptions-transport-ws": "^0.8.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.0.0",
-    "@storybook/addon-links": "^3.0.0",
-    "@storybook/react-native": "alpha",
+    "@storybook/addon-actions": "^3.1.8",
+    "@storybook/addon-links": "^3.1.6",
+    "@storybook/react-native": "^3.1.8",
     "babel-eslint": "^7.2.3",
-    "babel-jest": "20.0.3",
-    "babel-plugin-module-resolver": "^2.7.0",
-    "babel-preset-react-native": "2.1.0",
-    "babylon": "^6.17.1",
-    "eslint": "^4.2.0",
-    "eslint-config-airbnb": "^15.0.1",
+    "babel-jest": "^20.0.3",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-preset-react-native": "^2.1.0",
+    "babylon": "^6.17.4",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.2",
     "eslint-import-resolver-babel-module": "^3.0.0",
     "eslint-plugin-graphql": "^1.1.0",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-react-native": "^2.3.2",
     "eslint-plugin-react-perf": "^2.0.5",
     "graphcool": "^1.1.1",
-    "jest": "20.0.4",
+    "jest": "^20.0.4",
     "react-dom": "^16.0.0-alpha.12",
-    "react-test-renderer": "^15.5.4"
+    "react-test-renderer": "^15.6.1"
   },
   "jest": {
     "preset": "react-native"
