upgraded apollo to 2.0, removed redux and some other smaller upgrades.. big ass commit

--- a/package.json
+++ b/package.json
@@ -7,21 +7,24 @@
     "clean": "watchman watch-del-all && rm -rf $TMPDIR/react-*",
     "test": "jest",
     "lint": "eslint src",
-    "graphql:schema":
-      "rm schema.json && get-graphql-schema http://localhost:3000/api/graphql -j > schema.json",
+    "graphql:schema": "rm schema.json && get-graphql-schema http://localhost:3000/api/graphql -j > schema.json",
     "storybook": "storybook start -p 7007",
     "android:build:dev": "cd android && ./gradlew assembleRelease",
-    "android:build:prod":
-      "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
+    "android:build:prod": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
     "android:emulator": "emulator -avd Nexus6-android7.1.1-apiLevel25",
     "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator \"iPhone 8\"",
-    "ios:storybook":
-      "react-native run-ios --simulator \"iPhone 8\" --scheme TGStorybook"
+    "ios": "react-native run-ios --simulator \"iPhone X\"",
+    "ios:storybook": "react-native run-ios --simulator \"iPhone X\" --scheme TGStorybook"
   },
   "dependencies": {
-    "apollo-client": "^1.9.0-0",
+    "apollo-cache-inmemory": "^1.1.0",
+    "apollo-client": "^2.0.2",
+    "apollo-link": "^1.0.0",
+    "apollo-link-context": "^1.0.0",
+    "apollo-link-http": "^1.1.0",
+    "apollo-link-state": "^0.0.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "graphql": "^0.11.7",
     "graphql-tag": "^2.4.2",
     "immutability-helper": "^2.3.0",
     "lodash.groupby": "^4.6.0",
@@ -29,44 +32,40 @@
     "lodash.pick": "^4.4.0",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
-    "react": "16.0.0-alpha.12",
-    "react-apollo": "^1.4.3",
-    "react-native": "0.46.2",
-    "react-native-config": "^0.5.0",
-    "react-native-device-log": "^0.0.17",
+    "react": "16.0.0",
+    "react-apollo": "^2.0.0",
+    "react-native": "0.50.1",
+    "react-native-config": "^0.9.0",
+    "react-native-device-log": "^1.0.2",
     "react-native-onesignal": "^3.0.4",
     "react-native-segmented-view": "^2.0.0",
     "react-native-slowlog": "^1.0.2",
     "react-navigation": "^1.0.0-beta.11",
-    "react-redux": "^5.0.5",
     "react-required-if": "^1.0.1",
-    "redux": "^3.7.2",
-    "redux-persist": "^4.8.2",
-    "redux-thunk": "^2.2.0",
-    "subscriptions-transport-ws": "^0.8.1"
+    "subscriptions-transport-ws": "^0.9.1"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.1.8",
     "@storybook/addon-links": "^3.1.6",
     "@storybook/react-native": "^3.1.8",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^20.0.3",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-preset-react-native": "^2.1.0",
+    "babel-eslint": "^8.0.2",
+    "babel-jest": "^21.2.0",
+    "babel-plugin-module-resolver": "^3.0.0-beta.5",
+    "babel-preset-react-native": "^4.0.0",
     "babylon": "^6.17.4",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.2",
-    "eslint-import-resolver-babel-module": "^3.0.0",
-    "eslint-plugin-graphql": "^1.1.0",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-import-resolver-babel-module": "^4.0.0-beta.5",
+    "eslint-plugin-graphql": "^1.4.0-1",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.1.0",
-    "eslint-plugin-react-native": "^2.3.2",
+    "eslint-plugin-react-native": "^3.1.0",
     "eslint-plugin-react-perf": "^2.0.5",
     "get-graphql-schema": "^2.1.1",
-    "jest": "^20.0.4",
-    "react-dom": "^16.0.0-alpha.12",
-    "react-test-renderer": "^15.6.1"
+    "jest": "^21.2.1",
+    "react-dom": "^16.0.0",
+    "react-test-renderer": "^16.0.0"
   },
   "jest": {
     "preset": "react-native"
