--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "prop-types": "^15.5.10",
     "react": "16.0.0",
     "react-apollo": "^2.0.0",
-    "react-native": "0.50.1",
+    "react-native": "0.50.3",
     "react-native-config": "^0.9.0",
     "react-native-device-log": "^1.0.2",
     "react-native-onesignal": "^3.0.4",
@@ -53,7 +53,7 @@
     "@storybook/react-native": "^3.1.8",
     "babel-eslint": "^8.0.2",
     "babel-jest": "^21.2.0",
-    "babel-plugin-module-resolver": "^3.0.0-beta.5",
+    "babel-plugin-module-resolver": "^3.0.0",
     "babel-preset-react-native": "^4.0.0",
     "babylon": "^6.17.4",
     "eslint": "^4.10.0",
