--- a/package.json
+++ b/package.json
@@ -7,22 +7,26 @@
     "clean": "watchman watch-del-all && rm -rf $TMPDIR/react-*",
     "test": "jest",
     "lint": "eslint src",
-    "graphql:schema": "apollo-codegen introspect-schema https://www.tisdagsgolfen.se/api/graphql --output schema.json",
-    "graphql:gentypes": "apollo-codegen generate src/graph/**/*.js --schema schema.json --target typescript --output operation-result-types.ts",
+    "graphql:schema":
+      "apollo-codegen introspect-schema https://www.tisdagsgolfen.se/api/graphql --output schema.json",
+    "graphql:gentypes":
+      "apollo-codegen generate src/graph/**/*.js --schema schema.json --target typescript --output operation-result-types.ts",
     "storybook": "storybook start -p 7007",
     "android:build:dev": "cd android && ./gradlew assembleRelease",
-    "android:build:prod": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
+    "android:build:prod":
+      "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
     "android:emulator": "emulator -avd Nexus6-android7.1.1-apiLevel25",
     "android": "react-native run-android",
     "ios": "react-native run-ios --simulator \"iPhone 8\"",
-    "ios:storybook": "react-native run-ios --simulator \"iPhone 8\" --scheme TGStorybook"
+    "ios:storybook":
+      "react-native run-ios --simulator \"iPhone 8\" --scheme TGStorybook"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.0",
-    "apollo-client": "^2.0.2",
-    "apollo-link": "^1.0.0",
-    "apollo-link-context": "^1.0.0",
-    "apollo-link-http": "^1.1.0",
+    "apollo-cache-inmemory": "^1.1.1",
+    "apollo-client": "^2.0.3",
+    "apollo-link": "^1.0.3",
+    "apollo-link-context": "^1.0.1",
+    "apollo-link-http": "^1.2.0",
     "apollo-link-state": "^0.0.4",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "graphql": "^0.11.7",
@@ -31,43 +35,42 @@
     "lodash.groupby": "^4.6.0",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
-    "moment": "^2.18.1",
+    "moment": "^2.19.2",
     "prop-types": "^15.5.10",
-    "react": "16.0.0",
-    "react-apollo": "^2.0.0",
+    "react": "16.1.1",
+    "react-apollo": "^2.0.1",
     "react-native": "0.50.3",
-    "react-native-config": "^0.9.0",
+    "react-native-config": "^0.10.0",
     "react-native-device-log": "^1.0.2",
-    "react-native-onesignal": "^3.0.4",
+    "react-native-onesignal": "^3.0.7",
     "react-native-segmented-view": "^2.0.0",
     "react-native-slowlog": "^1.0.2",
     "react-navigation": "^1.0.0-beta.19",
-    "react-required-if": "^1.0.1",
     "react-style-proptype": "^3.1.0",
     "subscriptions-transport-ws": "^0.9.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.1.8",
-    "@storybook/addon-links": "^3.1.6",
-    "@storybook/react-native": "^3.1.8",
+    "@storybook/addon-actions": "^3.2.16",
+    "@storybook/addon-links": "^3.2.16",
+    "@storybook/react-native": "^3.2.16",
     "apollo-codegen": "^0.17.2",
     "babel-eslint": "^8.0.2",
     "babel-jest": "^21.2.0",
     "babel-plugin-module-resolver": "^3.0.0",
     "babel-preset-react-native": "^4.0.0",
     "babylon": "^6.17.4",
-    "eslint": "^4.10.0",
+    "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-import-resolver-babel-module": "^4.0.0-beta.5",
-    "eslint-plugin-graphql": "^1.4.0-1",
+    "eslint-plugin-graphql": "^1.4.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-react-native": "^3.1.0",
     "eslint-plugin-react-perf": "^2.0.5",
     "jest": "^21.2.1",
-    "react-dom": "^16.0.0",
-    "react-test-renderer": "^16.0.0"
+    "react-dom": "^16.1.1",
+    "react-test-renderer": "^16.1.1"
   },
   "jest": {
     "preset": "react-native"
