--- a/package.json
+++ b/package.json
@@ -22,62 +22,64 @@
     "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.1",
-    "apollo-client": "^2.0.3",
-    "apollo-link": "^1.0.3",
-    "apollo-link-context": "^1.0.1",
-    "apollo-link-http": "^1.2.0",
-    "apollo-link-state": "^0.0.4",
+    "apollo-cache-inmemory": "^1.2.7",
+    "apollo-client": "^2.3.8",
+    "apollo-link": "^1.2.2",
+    "apollo-link-context": "^1.0.8",
+    "apollo-link-http": "^1.5.4",
+    "apollo-link-state": "^0.4.1",
     "babel-preset-react-native-stage-0": "^1.0.1",
-    "graphql": "^0.11.7",
-    "graphql-tag": "^2.4.2",
-    "immutability-helper": "^2.3.0",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
+    "immutability-helper": "^2.7.1",
     "lodash.groupby": "^4.6.0",
     "lodash.keys": "^4.2.0",
     "lodash.pick": "^4.4.0",
-    "moment": "^2.19.2",
-    "prop-types": "^15.5.10",
-    "react": "16.1.1",
-    "react-apollo": "^2.0.1",
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
+    "react": "16.4.2",
+    "react-apollo": "^2.1.11",
     "react-native": "0.50.3",
-    "react-native-config": "^0.10.0",
+    "react-native-config": "^0.11.5",
     "react-native-device-log": "^1.0.2",
-    "react-native-onesignal": "^3.0.7",
+    "react-native-dom": "0.2.0",
+    "react-native-onesignal": "^3.2.6",
     "react-native-segmented-view": "^2.0.0",
     "react-native-slowlog": "^1.0.2",
-    "react-navigation": "^1.0.0-beta.19",
-    "react-style-proptype": "^3.1.0",
-    "subscriptions-transport-ws": "^0.9.1"
+    "react-navigation": "^2.11.2",
+    "react-style-proptype": "^3.2.1",
+    "subscriptions-transport-ws": "^0.9.14"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.16",
-    "@storybook/addon-links": "^3.2.16",
-    "@storybook/react-native": "^3.2.16",
-    "apollo-codegen": "^0.17.2",
-    "babel-eslint": "^8.0.2",
-    "babel-jest": "^21.2.0",
-    "babel-plugin-module-resolver": "^3.0.0",
-    "babel-preset-react-native": "^4.0.0",
+    "@storybook/addon-actions": "^3.4.10",
+    "@storybook/addon-links": "^3.4.10",
+    "@storybook/react-native": "^3.4.10",
+    "apollo-codegen": "^0.20.2",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.4.2",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-preset-react-native": "5.0.2",
     "babylon": "^6.17.4",
-    "eslint": "^4.11.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-prettier": "^2.8.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-import-resolver-babel-module": "^4.0.0-beta.5",
-    "eslint-plugin-graphql": "^1.4.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-react-native": "^3.1.0",
-    "eslint-plugin-react-perf": "^2.0.5",
-    "eslint-plugin-standard": "^3.0.1",
-    "jest": "^21.2.1",
-    "prettier": "^1.8.2",
-    "react-dom": "^16.1.1",
-    "react-test-renderer": "^16.1.1"
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-import-resolver-babel-module": "^4.0.0",
+    "eslint-plugin-graphql": "^2.1.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-react-native": "^3.2.1",
+    "eslint-plugin-react-perf": "^2.0.9",
+    "eslint-plugin-standard": "^3.1.0",
+    "jest": "^23.5.0",
+    "prettier": "^1.14.2",
+    "react-dom": "^16.4.2",
+    "react-test-renderer": "^16.4.2",
+    "rnpm-plugin-dom": "^0.1.1"
   },
   "jest": {
     "preset": "react-native"
