once again... got it running after a while

--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,4 @@
 {
-  "presets": ["react-native", "react-native-stage-0/decorator-support"],
-  "plugins": [
-    [
-      "module-resolver",
-      {
-        "root": ["./src", "./src/components", "./src/graph"],
-        "alias": {
-          "shared": "./src/components/shared",
-          "screens": "./src/screens"
-        }
-      }
-    ]
-  ],
+  "presets": ["react-native"],
   "sourceMaps": true
 }
