--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "clean": "watchman watch-del-all && rm -rf $TMPDIR/react-*",
     "test": "jest",
     "lint": "eslint src",
-    "graphql:schema":
-      "apollo-codegen introspect-schema https://www.tisdagsgolfen.se/api/graphql --output schema.json",
-    "graphql:gentypes":
-      "apollo-codegen generate src/graph/**/*.js --schema schema.json --target typescript --output operation-result-types.ts",
+    "graphql:schema": "apollo-codegen introspect-schema https://www.tisdagsgolfen.se/api/graphql --output schema.json",
+    "graphql:gentypes": "apollo-codegen generate src/graph/**/*.js --schema schema.json --target typescript --output operation-result-types.ts",
     "storybook": "storybook start -p 7007",
     "android:build:dev": "cd android && ./gradlew assembleRelease",
     "android:build:prod": "cd android && ENVFILE=.env.production ./gradlew assembleRelease",
@@ -28,7 +26,6 @@
     "apollo-link-context": "^1.0.8",
     "apollo-link-http": "^1.5.4",
     "apollo-link-state": "^0.4.1",
-    "babel-preset-react-native-stage-0": "^1.0.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "immutability-helper": "^2.7.1",
@@ -37,9 +34,9 @@
     "lodash.pick": "^4.4.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
-    "react": "16.4.2",
+    "react": "16.4.1",
     "react-apollo": "^2.1.11",
-    "react-native": "0.50.3",
+    "react-native": "0.56.0",
     "react-native-config": "^0.11.5",
     "react-native-device-log": "^1.0.2",
     "react-native-dom": "0.2.0",
